# drf_simple_wallet

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
tests/: conftest.py  test_models.py
wallet/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
wallet/migrations/: 0001_initial.py
